# CNN_Classifier

./: LICENSE  README.md  app.py  init_setup.sh  params.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  test.py  tox.ini
configs/: config.yaml
research/: data_ingestion.ipynb  stage_02_1.ipynb  stage_02_2.ipynb  stage_03.ipynb  trials.ipynb
src/CNNClassifier/: __init__.py
src/CNNClassifier/components/: __init__.py  cleaning_data.py  stage_01_data_ingestion.py  stage_02_prepare_basemodel.py  stage_03_train.py  stage_04_evaluate.py
src/CNNClassifier/config/: configuration.py
src/CNNClassifier/constants/: __init__.py
src/CNNClassifier/entity/: config_entity.py
src/CNNClassifier/pipeline/: 01_data_ingestion.py  02_prepare_base_model.py  03_train.py  04_evaluation.py
src/CNNClassifier/utils/: utils.py
