# along with 'setup.cfg' '.toml' file is used to configure the package
[build-system]
requires = ['setuptools>=42.0', "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"         # Where to test this
    ]

# for checking errors
[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true